crates/crucible-cli/src/tui/testing/snapshots/crucible_cli__tui__testing__e2e_flow_tests__streaming_response_flow__e2e_streaming_step1_initial.snap
---
source: crates/crucible-cli/src/tui/testing/e2e_flow_tests.rs
expression: h.render()
---
                                                                                
 > Hello                                                                        
                                                                                
 ● Hi! How can I help?                                                          
                                                                                
 ● I                                                                            
                                                                                
                                                                                
 >                                                                              
                                                                                
▸ Plan │ ollama/llama3.2 │ Ready
