crates/crucible-cli/src/tui/testing/snapshots/crucible_cli__tui__testing__e2e_flow_tests__streaming_response_flow__e2e_streaming_step3_complete.snap
---
source: crates/crucible-cli/src/tui/testing/e2e_flow_tests.rs
expression: h.render()
---
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
 > Hello                                                                        
                                                                                
 ● Hi! How can I help?                                                          
                                                                                
 ● I can help you with that request.                                            
                                                                                
░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░
 >                                                                              
░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░
▸ Plan │ Ready
